[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/ui/ActionMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/icons/actions/wait.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/actions/attack.png" type="Texture" id=4]
[ext_resource path="res://src/ui/RadialContainer.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/ui/icons/actions/skill.png" type="Texture" id=6]
[ext_resource path="res://resources/visual/gui/theme_standard.tres" type="Theme" id=7]

[node name="ActionMenu" type="Node2D"]
position = Vector2( 12, 12 )
script = ExtResource( 1 )

[node name="Container" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Container" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
base_rotation = 90.0

[node name="Wait" type="Button" parent="Container/Actions"]
margin_left = 28.0
margin_top = 56.0
margin_right = 52.0
margin_bottom = 80.0
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="Container/Actions"]
margin_left = 3.75129
margin_top = 14.0
margin_right = 27.7513
margin_bottom = 38.0
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill" type="Button" parent="Container/Actions"]
margin_left = 52.2487
margin_top = 14.0
margin_right = 76.2487
margin_bottom = 38.0
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="Container" parent="Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Container/Actions/Wait" to="." method="_on_Wait_pressed"]
[connection signal="pressed" from="Container/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="Container/Actions/Skill" to="." method="_on_Skill_pressed"]
